--- a/MTL-CPL-U/mtl-cpl-u-real-data.ipynb
+++ b/MTL-CPL-U/mtl-cpl-u-real-data.ipynb
@@ -2751,7 +2751,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2765,7 +2765,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
