--- a/MTL-CPL-U/mtl-cpl-u.ipynb
+++ b/MTL-CPL-U/mtl-cpl-u.ipynb
@@ -2746,7 +2746,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2760,7 +2760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
