Multi-task Learning for Camera  Calibration

--- a/deep-homo/exp-12-real-data-cs.ipynb
+++ b/deep-homo/exp-12-real-data-cs.ipynb
@@ -1770,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1826,19 +1826,19 @@
     "\n",
     "\n",
     "\n",
-    "predicted_fx = np.average(Yt[:int(len(Yt)*0.7)][0])\n",
-    "predicted_fy = np.average(Yt[:int(len(Yt)*0.7)][1])\n",
-    "predicted_u0 = np.average(Yt[:int(len(Yt)*0.7)][2])\n",
-    "predicted_v0 = np.average(Yt[:int(len(Yt)*0.7)][3])\n",
-    "predicted_baseline = np.average(Yt[:int(len(Yt)*0.7)][4])\n",
-    "predicted_disparity = np.average(Yt[:int(len(Yt)*0.7)][5])\n",
-    "predicted_tx = np.average(Yt[:int(len(Yt)*0.7)][6])\n",
-    "predicted_ty = np.average(Yt[:int(len(Yt)*0.7)][7])\n",
-    "predicted_tz = np.average(Yt[:int(len(Yt)*0.7)][8])\n",
-    "predicted_pitch = np.average(Yt[:int(len(Yt)*0.7)][9])\n",
-    "predicted_x = np.average(Yt[:int(len(Yt)*0.7)][10])\n",
-    "predicted_y = np.average(Yt[:int(len(Yt)*0.7)][11])\n",
-    "predicted_z = np.average(Yt[:int(len(Yt)*0.7)][12])\n",
+    "predicted_fx = np.average(Yt[0])\n",
+    "predicted_fy = np.average(Yt[1])\n",
+    "predicted_u0 = np.average(Yt[2])\n",
+    "predicted_v0 = np.average(Yt[3])\n",
+    "predicted_baseline = np.average(Yt[4])\n",
+    "predicted_disparity = np.average(Yt[5])\n",
+    "predicted_tx = np.average(Yt[6])\n",
+    "predicted_ty = np.average(Yt[7])\n",
+    "predicted_tz = np.average(Yt[8])\n",
+    "predicted_pitch = np.average(Yt[9])\n",
+    "predicted_x = np.average(Yt[10])\n",
+    "predicted_y = np.average(Yt[11])\n",
+    "predicted_z = np.average(Yt[12])\n",
     "\n",
     "key_counter = 0\n",
     "\n",
