--- a/deep-homo/exp-12-real-data.ipynb
+++ b/deep-homo/exp-12-real-data.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "Text(0, 0.5, '% Correct')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "(0, 1412, 2766, 2914, 2914, 2914)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "(0.0, 0.48455730954015097, 0.9492107069320521, 1.0)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1770,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1826,19 +1826,19 @@
     "\n",
     "\n",
     "\n",
-    "predicted_fx = np.average(Yt[:int(len(Yt)*0.7)][0])\n",
-    "predicted_fy = np.average(Yt[:int(len(Yt)*0.7)][1])\n",
-    "predicted_u0 = np.average(Yt[:int(len(Yt)*0.7)][2])\n",
-    "predicted_v0 = np.average(Yt[:int(len(Yt)*0.7)][3])\n",
-    "predicted_baseline = np.average(Yt[:int(len(Yt)*0.7)][4])\n",
-    "predicted_disparity = np.average(Yt[:int(len(Yt)*0.7)][5])\n",
-    "predicted_tx = np.average(Yt[:int(len(Yt)*0.7)][6])\n",
-    "predicted_ty = np.average(Yt[:int(len(Yt)*0.7)][7])\n",
-    "predicted_tz = np.average(Yt[:int(len(Yt)*0.7)][8])\n",
-    "predicted_pitch = np.average(Yt[:int(len(Yt)*0.7)][9])\n",
-    "predicted_x = np.average(Yt[:int(len(Yt)*0.7)][10])\n",
-    "predicted_y = np.average(Yt[:int(len(Yt)*0.7)][11])\n",
-    "predicted_z = np.average(Yt[:int(len(Yt)*0.7)][12])\n",
+    "predicted_fx = np.average(Yt[0])\n",
+    "predicted_fy = np.average(Yt[1])\n",
+    "predicted_u0 = np.average(Yt[2])\n",
+    "predicted_v0 = np.average(Yt[3])\n",
+    "predicted_baseline = np.average(Yt[4])\n",
+    "predicted_disparity = np.average(Yt[5])\n",
+    "predicted_tx = np.average(Yt[6])\n",
+    "predicted_ty = np.average(Yt[7])\n",
+    "predicted_tz = np.average(Yt[8])\n",
+    "predicted_pitch = np.average(Yt[9])\n",
+    "predicted_x = np.average(Yt[10])\n",
+    "predicted_y = np.average(Yt[11])\n",
+    "predicted_z = np.average(Yt[12])\n",
     "\n",
     "key_counter = 0\n",
     "\n",
@@ -1951,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1960,7 +1960,7 @@
        "Text(0, 0.5, '% Correct')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2034,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2043,7 +2043,7 @@
        "(0, 0, 0, 2914, 2914, 2914)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2054,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2063,7 +2063,7 @@
        "(0.0, 0.0, 0.0, 1.0)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
